--- a/Source/cppnamelint.toml
+++ b/Source/cppnamelint.toml
@@ -32,19 +32,14 @@ VariablePrefix          = [ "m_" ]
 FunctionName            = ["main",
                            "newASTConsumer"]
 
-
 [Hungarian.Others]
 PreferUpperCamelIfMissed = true
 
-[Hungarian.PointerList]
+[Hungarian.NullStringList]
 "char*"                  = "sz"
 "wchar_t*"               = "wsz"
 "char**"                 = "psz"
 "wchar_t**"              = "pwsz"
-
-[Hungarian.ArrayList]
-char 					 = "sz"
-
 
 [Hungarian.WordList]
 # C Primitive Type
@@ -61,6 +56,7 @@ char 					 = "sz"
 "char"                   = "c"
 "_Bool"                  = "b"
 "bool"                   = "b"
+"int"                    = "i"
 "wchar_t"                = "wc"
 "signed char"            = "sc"
 "unsigned char"          = "uc"
@@ -70,7 +66,6 @@ char 					 = "sz"
 "signed short int"       = "ssi"
 "unsigned short"         = "us"
 "unsigned short int"     = "usi"
-"int"                    = "i"
 "signed"                 = "s"
 "signed int"             = "si"
 "unsigned"               = "u"
