--- a/Source/Test/Sample/Sample_01.toml
+++ b/Source/Test/Sample/Sample_01.toml
@@ -38,7 +38,7 @@ FunctionName            = ["main",
 [Hungarian.Others]
 PreferUpperCamelIfMissed = true
 
-[Hungarian.PointerList]
+[Hungarian.NullStringList]
 "char*"                  = "sz"
 "wchar_t*"               = "wsz"
 "char**"                 = "psz"
